# kaizen

./: .ai-ack  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  ROADMAP.md  SECURITY.md  test_testSessionEndsInDone_0.itf.json
.cargo/: config.toml  deny.toml
.claude/: settings.json
.config/: nextest.toml
.cursor/: hooks.json
.cursor/hooks/: cap-bash.sh  read-cap.sh  session-start-skills.sh  subagent-context-check.sh
.cursor/rules/: agent-parity.mdc  agent-workflow.mdc  caveman-writing.mdc  code-quality.mdc  design-principles.mdc  documentation.mdc  feature-shipping-docs.mdc  quint-before-code.mdc  read-hygiene.mdc  session-budget.mdc  subagent-first.mdc
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  branch-ruleset-main.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  crates-io-yank-all.yml  release.yml
assets/: cost.toml  kaizen-retro-SKILL.md
docs/: README.md  architecture.md  concepts.md  config.md  daemon.md  datamodel.md  experiments.md  impl-sequence.md  ingest-contract-events.md  ingest-contract-privacy.md  ingest-contract-telemetry.md  ingest-contract.md  install.md  llm-proxy.md  mcp.md  outcomes.md  patterns.md  quint-coverage.md  retro-tuning.md  retro.md  roadmap.md  structure.md  system-telemetry.md  telemetry-journey.md  tui.md  usage-improve.md  usage-observe.md  usage-operate.md  usage-setup.md  usage-telemetry.md  usage.md  web.md
docs/adr/: 001-storage.md  002-cost-estimation.md  003-no-llm-retro.md  004-agplv3.md  005-hybrid-experiment-binding.md  006-perf-redesign.md  007-project-data-in-home.md  008-host-integration-in-home.md  009-guidance-proposals.md  010-sqlite-only-local-storage.md  011-target-repositories-read-only.md  README.md
docs/perf-redesign/: README.md  phase-0-quick-wins.md  phase-1-tui-virtualization.md  phase-2-incremental-projector.md  phase-3-daemon.md  phase-4-tiered-storage.md  phase-5-search.md
docs/plans/: kaizen-local-smoke-tests-mcp.md  kaizen-local-smoke-tests-workflows.md  kaizen-local-smoke-tests.md  kaizen-local-walkthrough.md
docs/roadmap/: README.md  f1-llm-as-judge.md  f2-prompt-version-tracking.md  f3-human-feedback.md  f4-trace-hierarchy.md  f5-dataset-curation.md
docs/tutorial/: 01-setup.md  02-observe.md  03-insights-guidance.md  04-metrics.md  05-retro.md  06-experiments.md  07-proxy-sync-telemetry.md  08-mcp.md  09-housekeeping.md  README.md
githooks/: pre-commit
packaging/homebrew/: README.md  kaizen-cli.rb
packaging/launchd/: me.lucasmarques.kaizen.daemon.plist
packaging/systemd/: kaizen-daemon.service
scripts/: check-quint-specs.sh  install-git-hooks.sh  install-local.sh  install-quint-evaluator.sh  push-release-tag.sh  record-kaizen-walkthrough.sh  release.sh  render-homebrew-tap-formula.sh
specs/: agent-behavior.qnt  auto-update.qnt  daemon-handshake.qnt  doctor-diagnostic.qnt  eval-h15.qnt  event-index.qnt  event-log-hot.qnt  experiment-binding.qnt  experiment-lifecycle.qnt  experiment-sequential.qnt  gc-prune.qnt  guidance-candidate.qnt  guidance-proposal-llm.qnt  guidance-score.qnt  h33-automation.qnt  hook-ingest.qnt  ingest-idempotency.qnt  init-setup.qnt  llm-call-quality.qnt  llm-proxy.qnt  mcp-server.qnt  metrics-pipeline.qnt  observe-pipeline.qnt  openclaw-ingest.qnt  project-lookup.qnt  projector-incremental.qnt  prompt-tracking.qnt  provider-pull-cache.qnt  provider-pull-event-keys.qnt  read-report-perf.qnt  redaction-completeness.qnt  retention.qnt  retro-pipeline.qnt  search.qnt  session-feedback.qnt  session-lifecycle.qnt  session-lookup.qnt  session-outcome.qnt  session-tree.qnt  span-hierarchy.qnt  (+9 more)
specs/openapi/: ingest-v1.yaml
src/: ipc.rs  lib.rs  main.rs
src/bin_kaizen/: mod.rs  workspace.rs
src/collect/: mod.rs  model_from_json.rs  outcomes.rs
src/core/: config.rs  cost.rs  data_source.rs  event.rs  home_paths.rs  identity.rs  legacy_import.rs  machine_registry.rs  migrate_home.rs  mod.rs  paths.rs  project_identity.rs  prompt_text.rs  repo.rs  safe_fs.rs  session.rs  trace_span.rs  workspace.rs
src/core_loop/: alert_checks.rs  alert_cost.rs  alerts.rs  cases.rs  mod.rs  query.rs  query_meta.rs  query_syntax.rs  review.rs  rules.rs  time.rs  types.rs
src/daemon/: background.rs  capture_status.rs  client.rs  lifecycle.rs  mod.rs  proxy_task.rs  scanner_health.rs  scanner_task.rs  server.rs  supervisor.rs  worker.rs
src/eval/: engine.rs  judge.rs  mod.rs  rubric.rs  types.rs
src/experiment/: binding.rs  engine.rs  metric.rs  mod.rs  stats.rs  store.rs  types.rs
src/extensions/: aggregates.rs  atif.rs  diffs.rs  hash_chain.rs  jsonl.rs  mod.rs
src/feedback/: mod.rs  types.rs
src/guidance/: inventory.rs  llm.rs  mod.rs  proposals.rs  score.rs  score_inputs.rs  score_math.rs  types.rs  validation.rs
src/interchange/: atif.rs  diff_attribution.rs  hash_chain.rs  jsonl.rs  mod.rs
src/mcp/: handler.rs  mod.rs
src/metrics/: analyze.rs  codegraph.rs  git.rs  index.rs  ladybug.rs  mod.rs  quality.rs  report.rs  types.rs
src/prompt/: diff.rs  mod.rs  snapshot.rs  types.rs
src/provider/: datadog.rs  mod.rs  posthog.rs  pull_import.rs
src/proxy/: forward.rs  http_ext.rs  mod.rs  opts.rs  record.rs  server.rs  sse.rs  state.rs  transform.rs
src/report/: mod.rs
src/retro/: engine.rs  inputs.rs  mod.rs  scheduler.rs  types.rs
src/search/: extract.rs  mod.rs  reader.rs  reindex.rs  schema.rs  writer.rs  writer_tests.rs
src/shell/: alerts.rs  cases.rs  cli.rs  cli_tests.rs  core_query.rs  doctor.rs  eval.rs  exp.rs  extensions.rs  feedback.rs  fmt.rs  gc.rs  guidance.rs  guidance_candidates.rs  (+26 more)
tests/: cli_help_matrix.inc  cli_help_smoke.rs  cli_shell_only_smoke.rs  cli_ux_compat.rs  daemon_repository_paths.rs  init_prompt_hook.rs  legacy_import_read_only.rs  machine_registry.rs  mcp_parity.rs  mcp_tool_name_validation.rs  mcp_tool_names.inc  mcp_tools_smoke.rs  openclaw_ingest.rs  read_only_state.rs  repository_read_only.rs  repository_write_paths.rs  web_brand_asset.rs  web_live.rs  web_parity.rs
(+421 files in other folders)
