[package]
name = "kaizen"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Lucas Marques <hi@lucasmarques.me>"]
license = "AGPL-3.0-or-later"
description = "Local-first telemetry and tooling for AI coding agent sessions (Cursor, Claude Code, Codex)."
repository = "https://github.com/lucasmarqs/kaizen"
homepage = "https://github.com/lucasmarqs/kaizen"
documentation = "https://docs.rs/kaizen"
readme = "README.md"
keywords = ["ai", "agent", "telemetry", "cursor", "claude"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    "discoveries/",
    ".kaizen/",
    ".cursor/",
    ".claude/",
    "specs/",
    "assets/",
    "docs/",
    "scripts/",
    ".github/",
    "AGENTS.md",
    "CLAUDE.md",
    "CONTRIBUTING.md",
    "ROADMAP.md",
    "CHANGELOG.md",
    "CODE_OF_CONDUCT.md",
    "SECURITY.md",
    ".gitignore",
    "*.itf.json",
]

[lib]
name = "kaizen"
path = "src/lib.rs"

[[bin]]
name = "kaizen"
path = "src/main.rs"

[[test]]
name = "session_lifecycle"
path = "tests/spec/session_lifecycle.rs"

[[test]]
name = "ingest_idempotency"
path = "tests/spec/ingest_idempotency.rs"

[[test]]
name = "ingest_stub"
path = "tests/ingest_stub/integration_test.rs"

[[test]]
name = "hook_ingest"
path = "tests/spec/hook_ingest.rs"

[[test]]
name = "redaction_completeness"
path = "tests/spec/redaction_completeness.rs"

[[test]]
name = "sync_backpressure"
path = "tests/spec/sync_backpressure.rs"

[[test]]
name = "retro_pipeline"
path = "tests/spec/retro_pipeline.rs"

[[test]]
name = "init_setup"
path = "tests/spec/init_setup.rs"

[[test]]
name = "experiment_lifecycle"
path = "tests/spec/experiment_lifecycle.rs"

[[test]]
name = "retention"
path = "tests/spec/retention.rs"

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
rusqlite = { version = "0.39", features = ["bundled"] }
rand = { version = "0.8", features = ["small_rng"] }
tokio = { version = "1", features = ["full"] }
notify = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
ratatui = "0.29"
crossterm = "0.28"
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "blocking", "rustls-tls"] }
flate2 = "1"
uuid = { version = "1", features = ["v7"] }
blake3 = "1"
aho-corasick = "1"
regex = "1"
hex = "0.4"
time = { version = "0.3", features = ["formatting", "macros", "local-offset"] }
fs4 = { version = "0.13", features = ["sync"] }
lbug = "0.15"
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.25"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"

[dev-dependencies]
quint-connect = "0.1"
itf = "0.4"
axum = "0.8"
tower = { version = "0.5", features = ["util"] }
tempfile = "3"
